[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Bullet/All_Fire_Bullet_Pixel_16x16.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Bullet/Base0.png" type="Texture" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;


uniform vec4 original_0: hint_color;
uniform vec4 original_1: hint_color;
uniform vec4 original_2: hint_color;
uniform vec4 original_3: hint_color;
uniform vec4 original_4: hint_color;
uniform vec4 replace_0: hint_color;
uniform vec4 replace_1: hint_color;
uniform vec4 replace_2: hint_color;
uniform vec4 replace_3: hint_color;
uniform vec4 replace_4: hint_color;

const float precision = 0.1;


vec4 swap_color(vec4 color){
	vec4 original_colors[5] = vec4[5] (original_0, original_1, original_2, original_3, original_4);
	vec4 replace_colors[5] = vec4[5] (replace_0, replace_1, replace_2, replace_3, replace_4);
	for (int i = 0; i < 5; i ++) {
		if (distance(color, original_colors[i]) <= precision){
			return replace_colors[i];
		}
	}
	return color;
}


void fragment() {
	COLOR = swap_color(texture(TEXTURE, UV));
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/original_0 = Color( 0.572549, 0.00784314, 0, 1 )
shader_param/original_1 = Color( 0.976471, 0.639216, 0.105882, 1 )
shader_param/original_2 = Color( 0.87451, 0.243137, 0.137255, 1 )
shader_param/original_3 = Color( 0.980392, 0.415686, 0.0392157, 1 )
shader_param/original_4 = Color( 1, 0.85098, 0.654902, 1 )
shader_param/replace_0 = Color( 0.945098, 0.933333, 0.886275, 1 )
shader_param/replace_1 = Color( 0.941176, 0.92549, 0.847059, 1 )
shader_param/replace_2 = Color( 0.94902, 0.945098, 0.823529, 1 )
shader_param/replace_3 = Color( 0.901961, 0.894118, 0.878431, 1 )
shader_param/replace_4 = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 240, 288, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 288, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "hit",
"speed": 25.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.99328
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.0
height = 2.0

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
position = Vector2( 0, 1 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.148651, -0.371627 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D" type="Area2D" parent="." groups=["Bullet"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
